Update BBB logo to official accredited badge SVG

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                     <span class="badge-text">48 Years Experience</span>
                 </div>
                 <div class="badge-item badge-with-logo">
-                    <img src="images/bbb-logo.webp" alt="BBB A+ Rating" class="badge-logo" width="60" height="40">
+                    <img src="images/bbb-accredited.svg" alt="BBB Accredited Business" class="badge-logo" width="45" height="64">
                 </div>
                 <div class="badge-item badge-with-stars">
                     <div class="google-stars">
