Add BBB logo to trust bar under hero

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="trust-divider"></div>
                 <div class="trust-item">
                     <div class="trust-icon bbb">
-                        <span class="bbb-text">BBB</span>
+                        <img src="images/bbb-accredited.svg" alt="BBB Accredited" width="32" height="45">
                     </div>
                     <div class="trust-text">
                         <span class="trust-number">A+</span>
